--- a/src/pl/lublin/wsei/java/cwiczenia/sample.fxml
+++ b/src/pl/lublin/wsei/java/cwiczenia/sample.fxml
@@ -1,8 +1,64 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="pl.lublin.wsei.java.cwiczenia.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="800.0" snapToPixel="false" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.lublin.wsei.java.cwiczenia.Controller">
+    <columnConstraints>
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="30.0" prefHeight="50.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+
+    <children>
+        <Button layoutX="29.0" layoutY="39.0" mnemonicParsing="false" onAction="#btnOpenFileAction" prefHeight="25.0" prefWidth="140.0" text="Odtwórz plik" GridPane.columnSpan="2" />
+        <Label fx:id="lbFile" layoutX="122.0" layoutY="43.0" style="-fx-font-style: italic;" text="Prosze wczytać plik... " GridPane.columnIndex="2" GridPane.columnSpan="2" />
+        <ListView fx:id="lstNoblisci" layoutX="29.0" layoutY="98.0" prefHeight="287.0" prefWidth="424.0" GridPane.columnSpan="5" GridPane.rowIndex="2" GridPane.rowSpan="9">
+        <GridPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+        </GridPane.margin></ListView>
+        <Label layoutX="547.0" layoutY="98.0" text="Rok przyznania:" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+        <Label layoutX="547.0" layoutY="189.0" prefHeight="17.0" prefWidth="72.0" text="Dziedzina:" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+        <Label layoutX="547.0" layoutY="272.0" prefHeight="17.0" prefWidth="103.0" text="Kraj pochodzenia:" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="6" />
+        <Label layoutX="547.0" layoutY="346.0" prefHeight="17.0" prefWidth="72.0" text="Motywacja:" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="8" />
+        <TextField fx:id="txtRok" editable="false" layoutX="547.0" layoutY="127.0" prefHeight="35.0" prefWidth="346.0" GridPane.columnIndex="5" GridPane.columnSpan="4" GridPane.rowIndex="3">
+        <GridPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+        </GridPane.margin></TextField>
+        <TextField fx:id="txtDziedzina" editable="false" layoutX="545.0" layoutY="216.0" prefHeight="35.0" prefWidth="346.0" GridPane.columnIndex="5" GridPane.columnSpan="4" GridPane.rowIndex="5">
+    <GridPane.margin>
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+    </GridPane.margin></TextField>
+        <TextField fx:id="txtKraj" editable="false" layoutX="545.0" layoutY="297.0" prefHeight="35.0" prefWidth="346.0" GridPane.columnIndex="5" GridPane.columnSpan="4" GridPane.rowIndex="7">
+        <GridPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+        </GridPane.margin></TextField>
+        <TextArea fx:id="txtMotywacja" editable="false" layoutX="547.0" layoutY="372.0" prefHeight="112.0" prefWidth="228.0" wrapText="true" GridPane.columnIndex="5" GridPane.columnSpan="4" GridPane.rowIndex="9" GridPane.rowSpan="2">
+        <GridPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+        </GridPane.margin></TextArea>
+        <Button fx:id="btnExport" layoutX="547.0" layoutY="512.0" mnemonicParsing="false" onAction="#btnExportDanych" prefHeight="25.0" prefWidth="140.0" text="Export" GridPane.columnIndex="7" GridPane.columnSpan="2" GridPane.rowIndex="12" />
+    </children>
 </GridPane>
